--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_product_detail.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_product_detail.xml
@@ -233,6 +233,7 @@
                         android:background="@drawable/button_default_background" />
 
                     <ImageView
+                        android:id="@+id/btn_add_cart"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
