--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_login.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Accounts.LoginActivity">
+    tools:context=".Activitis.Accounts.LoginActivity">
 
     <TextView
         android:id="@+id/tv_1"
