--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_animation_main.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_animation_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Animation_main">
+    tools:context=".Activitis.Animation_main">
 
     <View
         android:id="@+id/v1"
