--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_cart.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Carts.CartActivity">
+    tools:context=".Activitis.Carts.CartActivity">
 
     <RelativeLayout
         android:id="@+id/relativelayout_3000"
