--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_product.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_product.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Products.ProductActivity">
+    tools:context=".Activitis.Products.ProductActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
