--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_product_detail.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_product_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Products.ProductDetailActivity">
+    tools:context=".Activitis.Products.ProductDetailActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
