--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_recover.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_recover.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0d1018"
-    tools:context=".Accounts.RecoverActivity">
+    tools:context=".Activitis.Accounts.RecoverActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
