--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_recover_email.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_recover_email.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0d1018"
-    tools:context=".Accounts.RecoverEmailActivity">
+    tools:context=".Activitis.Accounts.RecoverEmailActivity">
 
     <TextView
         android:id="@+id/tv_1"
