--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_product_by_category_id.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_product_by_category_id.xml
@@ -22,6 +22,7 @@
             android:background="@drawable/cross_small_20" />
 
         <TextView
+            android:id="@+id/name_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -35,5 +36,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp" />
+
+    <TextView
+        android:id="@+id/nullProduct"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Sản phẩm hiện tại đã bán hết"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
