--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_categoris.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_categoris.xml
@@ -4,73 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activitis.Settings.SettingActivity">
+    tools:context=".Activitis.Products.CategorisActivity">
 
-    <ImageView
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/bg_setting"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view_2000"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="152dp"
-        android:background="@drawable/bg_user_setting"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="155dp" />
-
-    <ImageView
-        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/user_48"
-        app:layout_constraintBottom_toBottomOf="@id/view_2000"
-        app:layout_constraintEnd_toEndOf="@id/view_2000"
-        app:layout_constraintStart_toStartOf="@+id/view_2000"
-        app:layout_constraintTop_toTopOf="@+id/view_2000" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Danh mục"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        app:layout_constraintEnd_toEndOf="@id/view_2000"
-        app:layout_constraintStart_toStartOf="@id/view_2000"
-        app:layout_constraintTop_toBottomOf="@+id/view_2000">
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:weightSum="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/setting_user_name"
-            android:layout_width="match_parent"
+            android:id="@+id/showSearchProduct"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="NGUYỄN THÀNH CÔNG"
-            android:textAllCaps="true"
-            android:textColor="#000000"
-            android:textSize="17dp"
+            android:layout_weight="1.4"
+            android:background="@drawable/edt_border"
+            android:drawableStart="@drawable/search_18"
+            android:drawablePadding="5dp"
+            android:padding="6dp"
+            android:text="Tìm kiếm sản phẩm"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/setting_user_email"
-            android:layout_width="match_parent"
+            android:id="@+id/category_getAllProduct"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="nguyenthanhcong@gmail.com"
-            android:textColor="#000000"
-            android:textSize="14dp"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1.6"
+            android:background="@drawable/edt_border"
+            android:padding="6dp"
+            android:text="Hiển thị tất cả sản phẩm"
+            android:textSize="15sp"
             android:textStyle="bold" />
-
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/view_all_category_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="60dp"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -120,5 +122,4 @@
                 android:textStyle="bold" />
         </RelativeLayout>
     </RelativeLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
