--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_product_detail.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_product_detail.xml
@@ -242,6 +242,7 @@
 
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_add_payment"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
