--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_detail_cart.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_detail_cart.xml
@@ -142,7 +142,7 @@
             android:layout_marginEnd="10dp"
             android:background="@drawable/edt_payment"
             android:hint="Số điện thoại"
-            android:inputType="text"
+            android:inputType="number"
             android:maxLines="1" />
 
         <TextView
