--- a/AppInterior/FoodPr/app/src/main/res/drawable/bg_category_itme.xml
+++ b/AppInterior/FoodPr/app/src/main/res/drawable/bg_category_itme.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#90918b"
+    <gradient android:startColor="#E2E5D2"
         android:endColor="#EBE0E8"/>
 </shape>
