--- a/AppInterior/FoodPr/app/src/main/res/layout/category_item_adapter.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/category_item_adapter.xml
@@ -20,7 +20,7 @@
 
         <ImageView
             android:id="@+id/categoryImg_item"
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="150dp"
             android:layout_gravity="end"
             android:scaleType="centerCrop"
@@ -31,7 +31,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="20dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="4dp">
 
@@ -42,7 +42,7 @@
             android:layout_margin="10dp"
             android:ellipsize="end"
             android:maxLines="4"
-            android:textStyle="bold"
-            android:text="Sản phẩm 1" />
+            android:text="Sản phẩm 1"
+            android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
