--- a/AppInterior/FoodPr/app/src/main/res/layout/slider_layout_home.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/slider_layout_home.xml
@@ -23,10 +23,10 @@
             android:src="@drawable/ic_launcher_background" />
 
         <View
-            android:layout_width="40dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="15dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:background="#000000" />
 
         <TextView
@@ -35,9 +35,11 @@
             android:layout_height="20dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="3dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:text="100%"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:textSize="11sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/name_home_item"
